php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #24284 memory leak in pg_ping()
Submitted: 2003-06-22 07:29 UTC Modified: 2003-06-22 12:04 UTC
From: incognite at centrum dot cz Assigned: iliaa (profile)
Status: Closed Package: PostgreSQL related
PHP Version: 4.3.1 OS: FreeBSD 4.8
Private report: No CVE-ID: None
 [2003-06-22 07:29 UTC] incognite at centrum dot cz
Description:
------------
It appears that calling pg_ping() function repeatly causes a memory leak of few KB. We have synchronization script between Mysql and PostgreSQL which is running 24/7. 
In a main loop we have pg_ping() that every 5 secs checks the connection to master PGSql server. Every 5 secs it consumes some memory and it does not free it back. After commenting the line pg_ping() in our script, memory leak disappears.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-06-22 12:04 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC