Fixed bug #24284 (Fixed memory leak inside pg_ping())

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@132911 c90b9560-bf6c-de11-be94-00142212c4b1